--- a/articles/active-directory/manage-apps/toc.yml
+++ b/articles/active-directory/manage-apps/toc.yml
@@ -287,6 +287,8 @@
               href: application-proxy-connector-installation-problem.md
             - name: Aanmeldingsprobleem
               href: application-sign-in-problem-on-premises-application-proxy.md
+            - name: Problemen met CORS in de toepassingsproxy
+              href: application-proxy-understand-cors-issues.md
 - name: Naslaginformatie
   items:
     - name: Versiegeschiedenis van toepassingsproxy
