--- a/articles/sql-database/toc.yml
+++ b/articles/sql-database/toc.yml
@@ -101,7 +101,7 @@
       href: sql-database-get-started-sql-data-sync.md
     - name: Machine Learning Services
       items:
-        - name: Een voorspellend model bouwen en implementeren in R
+        - name: Een voorspellend model in R bouwen
           items:
             - name: '1: De gegevens voorbereiden'
               href: sql-database-tutorial-predictive-model-prepare-data.md
@@ -109,6 +109,14 @@
               href: sql-database-tutorial-predictive-model-build-compare.md
             - name: '3: Het model implementeren'
               href: sql-database-tutorial-predictive-model-deploy.md
+        - name: Een clustering-model in R bouwen
+          items:
+            - name: '1: De gegevens voorbereiden'
+              href: sql-database-tutorial-clustering-model-prepare-data.md
+            - name: '2: Het model maken'
+              href: sql-database-tutorial-clustering-model-build.md
+            - name: '3: Het model implementeren'
+              href: sql-database-tutorial-clustering-model-deploy.md
 - name: Voorbeelden
   items:
     - name: Codevoorbeelden
