--- a/articles/cognitive-services/LUIS/breadcrumb/toc.yml
+++ b/articles/cognitive-services/LUIS/breadcrumb/toc.yml
@@ -6,6 +6,6 @@
       tocHref: /azure/cognitive-services/
       topicHref: /azure/cognitive-services/index
       items:
-        - name: Spraakservices
-          tocHref: /azure/cognitive-services/luis/
+        - name: LUIS
+          tocHref: /azure/cognitive-services/speech-service/
           topicHref: /azure/cognitive-services/luis/index
