--- a/articles/cognitive-services/LUIS/toc.yml
+++ b/articles/cognitive-services/LUIS/toc.yml
@@ -5,6 +5,8 @@
   items:
     - name: Wat is Language Understanding?
       href: what-is-luis.md
+    - name: Nieuwe functies
+      href: whats-new.md
 - name: Snelstartgidsen
   items:
     - name: Een vooraf gedefinieerde domein-app maken
@@ -197,8 +199,9 @@
         - name: Met Bing Spellingcontrole v7
           href: luis-tutorial-bing-spellcheck.md
         - name: Met spraakservice
-          href: luis-tutorial-speech-to-intent.md
-        - name: Versie 3 van het botframework gebruiken
+          maintainContext: true
+          href: ../speech-service/how-to-recognize-intents-from-speech-csharp.md?toc=/azure/cognitive-services/luis/toc.json&bc=/azure/cognitive-services/luis/breadcrumb/toc.json
+        - name: Met een bot
           items:
             - name: Web-app-bot
               items:
@@ -400,8 +403,6 @@
       href: 'https://github.com/Microsoft/Cognitive-Samples-IntelligentKiosk'
 - name: Resources
   items:
-    - name: Nieuwe functies
-      href: whats-new.md
     - name: Regionale beschikbaarheid
       href: 'https://azure.microsoft.com/global-infrastructure/services/?products=cognitive-services'
     - name: Ondersteuning voor taal en regio
