--- a/articles/cdn/TOC.yml
+++ b/articles/cdn/TOC.yml
@@ -42,7 +42,7 @@
       href: cdn-pop-list-api.md
     - name: Migreren van Standard Verizon naar Premium Verizon
       href: cdn-migrate.md
-    - name: DDoS Protection
+    - name: DDoS-bescherming
       href: cdn-ddos.md
 - name: Handleidingen
   items:
@@ -94,7 +94,7 @@
         - name: Resources controleren
           href: cdn-resource-health.md
         - name: Gedrag overschrijven met regels
-          href: cdn-rules-engine.md
+          href: cdn-verizon-premium-rules-engine.md
         - name: Traffic Manager gebruiken
           href: cdn-traffic-manager.md
     - name: Analyseren
@@ -134,15 +134,15 @@
           href: cdn-troubleshoot-allowed-ca.md
 - name: Naslaginformatie
   items:
-    - name: Naslaginformatie over de regelengine
-      href: cdn-rules-engine-reference.md
+    - name: Naslaginformatie over de regelengine van Verizon Premium
+      href: cdn-verizon-premium-rules-engine-reference.md
       items:
         - name: Voorwaardelijke expressies in de regelengine
-          href: cdn-rules-engine-reference-conditional-expressions.md
+          href: cdn-verizon-premium-rules-engine-reference-conditional-expressions.md
         - name: Criteria voor overeenkomst in de regelengine
-          href: cdn-rules-engine-reference-match-conditions.md
+          href: cdn-verizon-premium-rules-engine-reference-match-conditions.md
         - name: Functies van de regelengine
-          href: cdn-rules-engine-reference-features.md
+          href: cdn-verizon-premium-rules-engine-reference-features.md
         - name: HTTP-variabelen
           href: cdn-http-variables.md
     - name: Verizon-specifieke HTTP-headers
@@ -158,8 +158,6 @@
       href: /java/api/com.microsoft.azure.management.cdn
     - name: REST
       href: /rest/api/cdn/
-    - name: Resource Manager-sjabloon
-      href: /azure/templates/microsoft.cdn/allversions
 - name: Resources
   items:
     - name: POP-locaties van Azure CDN
