--- a/articles/iot-hub/TOC.yml
+++ b/articles/iot-hub/TOC.yml
@@ -347,7 +347,7 @@
               href: iot-hub-visual-studio-cloud-device-messaging.md
             - name: Gegevensvisualisatie in Power BI
               href: iot-hub-live-data-visualization-in-power-bi.md
-            - name: Gegevensvisualisatie met Web Apps
+            - name: Gegevensvisualisatie in een web-app
               href: iot-hub-live-data-visualization-in-web-apps.md
             - name: Weersvoorspelling met behulp van Azure Machine Learning
               href: iot-hub-weather-forecast-machine-learning.md
@@ -419,9 +419,9 @@
           href: /azure/azure-maps
         - name: Time Series Insights
           href: /azure/time-series-insights
-    - name: Edge
+    - name: IoT Edge
       items:
-        - name: IoT Edge
+        - name: Azure IoT Edge
           href: /azure/iot-edge
         - name: IoT Device-SDK's
           href: '/azure/iot-hub/iot-hub-devguide-sdks#azure-iot-device-sdks'
