--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -33,7 +33,9 @@
               href: storage-quickstart-blobs-nodejs-v10.md
             - name: Python
               href: storage-quickstart-blobs-python.md
-            - name: JS/HTML
+            - name: JS/HTML met v10 SDK
+              href: storage-quickstart-blobs-javascript-client-libraries-v10.md
+            - name: JS/HTML met v2 SDK
               href: storage-quickstart-blobs-javascript-client-libraries.md
             - name: Aan de slag
               href: storage-quickstart-blobs-go.md
