--- a/articles/active-directory/devices/index.yml
+++ b/articles/active-directory/devices/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
 documentType: LandingData
-title: Documentatie over Azure AD-apparaatbeheer
+title: Documentatie over het beheer van Azure AD-apparaatidentiteiten
 metadata:
   document_id: null
-  title: 'Documentatie over apparaatbeheer voor Azure Active Directory - Zelfstudies, concepten, naslaginformatie | Microsoft Docs'
-  description: Leer hoe u apparaatbeheer voor Azure Active Directory kunt configureren en testen.
+  title: 'Documentatie over het beheer van Azure AD-apparaatidentiteiten - Zelfstudies, concepten, naslaginformatie | Microsoft Docs'
+  description: Informatie over hoe u apparaatidentiteiten configureert en beheert in Azure AD.
   services: active-directory
   ms.subservice: devices
   author: MicrosoftGuyJFlo
@@ -16,7 +16,7 @@ metadata:
   ms.date: 08/14/2018
   ms.author: joflore
 abstract:
-  description: 'Uw gebruikers krijgen via apparaten toegang tot uw zakelijke assets. Om als ICT-beheerder uw bedrijfsassets te beschermen, hebt u controle over deze apparaten nodig. Zo kunt u ervoor zorgen dat uw gebruikers toegang hebben tot uw resources vanuit apparaten die voldoen aan uw normen voor beveiliging en naleving.<br>Apparaatbeheer vormt ook de basis voor apparaatgebaseerde scenario''s voor voorwaardelijke toegang. Met voorwaardelijke toegang op basis van apparaat kunt u ervoor zorgen dat toegang tot bronnen in uw omgeving alleen mogelijk is met beheerde apparaten.'
+  description: 'Uw gebruikers krijgen via apparaten in Azure AD toegang tot uw zakelijke assets. Als u als ICT-beheerder uw bedrijfsmiddelen wilt beschermen, moet u deze apparaatidentiteiten beschermen in Azure AD. Zo kunt u ervoor zorgen dat uw gebruikers toegang tot uw bronnen hebben vanaf apparaten die voldoen aan uw normen voor beveiliging en naleving.<br>Apparaatidentiteitsbeheer vormt ook de basis voor scenario''s met apparaatgebaseerde voorwaardelijke toegang. Met voorwaardelijke toegang op basis van apparaat kunt u ervoor zorgen dat toegang tot bronnen in uw omgeving alleen mogelijk is met beheerde apparaten.'
 sections:
   - title: Zelfstudies met stapsgewijze instructies
     items:
