--- a/articles/azure-functions/TOC.yml
+++ b/articles/azure-functions/TOC.yml
@@ -15,6 +15,16 @@
       href: functions-create-your-first-function-visual-studio.md
     - name: Functie maken - Visual Studio Code
       href: functions-create-first-function-vs-code.md
+    - name: Functie maken - Node.js met Visual Studio Code
+      items:
+        - name: Aan de slag
+          href: tutorial-javascript-vscode-get-started.md
+        - name: De toepassing maken
+          href: tutorial-javascript-vscode-create-app.md
+        - name: Uw app lokaal uitvoeren en testen
+          href: tutorial-javascript-vscode-run-app.md
+        - name: De website implementeren
+          href: tutorial-javascript-vscode-deploy-app.md
     - name: Functie maken - Java/Maven
       href: functions-create-first-java-maven.md
     - name: Functie maken - Python
@@ -58,7 +68,7 @@
     - name: Het formaat van afbeeldingen wijzigen met Event Grid
       href: ../event-grid/resize-images-on-storage-blob-upload-event.md?toc=%2fazure%2fazure-functions%2ftoc.json
     - name: Een serverloze web-app maken
-      href: 'https://docs.microsoft.com/azure/functions/tutorial-static-website-serverless-api-with-database'
+      href: /learn/modules/automatic-update-of-a-webapp-using-azure-functions-and-signalr
     - name: Een aangepaste Linux-installatiekopie maken
       href: functions-create-function-linux-custom-image.md
     - name: Functions op IoT Edge-apparaat
