--- a/articles/cognitive-services/QnAMaker/toc.yml
+++ b/articles/cognitive-services/QnAMaker/toc.yml
@@ -96,9 +96,9 @@
         - name: Een knowledge base maken
           href: Quickstarts/create-publish-knowledge-base.md
           displayName: 'create bot, bot, publish to bot, test, edit'
-        - name: Antwoord ophalen
+        - name: Antwoord ophalen met metagegevens
           href: How-To/metadata-generateanswer-usage.md
-          displayName: 'isTest, test, route, request, http, post, body, header, json, metadata, top, strictFilters, GenerateAnswer, API, answer'
+          displayName: 'isTest, test, route, request, http, post, body, header, json, metadata, top, strictFilters, GenerateAnswer, API, answer, RankerType, id, text, question, context'
         - name: Een bot maken met een ingeschakelde knowledge base
           href: Tutorials/integrate-qnamaker-luis.md
         - name: Een knowledge base maken in een andere taal
