--- a/articles/databox/TOC.yml
+++ b/articles/databox/TOC.yml
@@ -36,7 +36,7 @@
           items:
             - name: Lees de veiligheidsrichtlijnen
               href: data-box-safety.md
-            - name: Tracering en logboekregistratie
+            - name: Tracering en logboekregistratie beoordelen
               href: data-box-logs.md
             - name: Vereisten beoordelen
               items:
@@ -111,6 +111,8 @@
           items:
             - name: Beheren via Azure Portal
               href: data-box-portal-ui-admin.md
+            - name: Gegevens verplaatsen naar een blob-laag
+              href: data-box-how-to-set-data-tier.md
             - name: Problemen met Data Box Heavy oplossen
               href: data-box-disk-troubleshoot.md
             - name: Contact met ondersteuning
@@ -135,6 +137,8 @@
               href: data-box-heavy-deploy-picked-up.md
         - name: Concepten
           items:
+            - name: Tracering en logboekregistratie beoordelen
+              href: data-box-logs.md
             - name: Vereisten beoordelen
               href: data-box-heavy-system-requirements.md
             - name: Limieten begrijpen
@@ -143,10 +147,16 @@
           items:
             - name: Beheren via Azure Portal
               href: data-box-portal-admin.md
+            - name: Beheren via lokale webinterface
+              href: data-box-local-web-ui-admin.md
             - name: Apparaatproblemen oplossen
               href: data-box-troubleshoot.md
             - name: Contact met ondersteuning
               href: data-box-disk-contact-microsoft-support.md
+            - name: Migreren
+              items:
+                - name: Naar Azure File Sync
+                  href: ../storage/files/storage-sync-offline-data-transfer.md?toc=/azure/databox/toc.json&bc=/azure/databox/breadcrumb/toc.json
     - name: Resources
       items:
         - name: Data Box-product
