--- a/articles/iot-edge/index.yml
+++ b/articles/iot-edge/index.yml
@@ -1,55 +1,104 @@
-### YamlMime:YamlDocument
-documentType: LandingData
+### YamlMime:Landing
 title: Azure IoT Edge
-metadata:
-  title: 'Azure IoT Edge - zelfstudies, API-referentiemateriaal'
-  description: Gebruik Azure IoT Edge om Azure-services en aangepaste bedrijfslogica te implementeren in apparaten in Edge.
-  author: kgremban
-  manager: philmea
-  ms.service: iot-edge
-  services: iot-edge
-  ms.topic: landing-page
-  ms.date: 03/13/2019
-  ms.author: kgremban
-abstract:
-  description: 'Azure IoT Edge is een Internet of Things-service (IoT-service) die voortbouwt op IoT Hub. Deze service is bedoeld voor klanten die ook gegevens willen analyseren op apparaten, oftewel ''aan de rand'', in plaats van in de cloud. Door delen van uw werkbelasting naar de rand te verplaatsen, hoeven uw apparaten minder tijd te besteden aan het verzenden van berichten naar de cloud en kunnen ze sneller reageren op statuswijzigingen.'
-  aside:
-    image:
-      alt: null
-      height: 110
-      src: ./media/index/iot-edge-thumbnail.png
-      width: 250
-    title: 'De intelligente rand maken met Azure IoT Edge (6:59)'
-    href: 'https://channel9.msdn.com/Shows/Internet-of-Things-Show/Creating-the-intelligent-edge-with-Azure-IoT-Edge'
-    width: 250
-sections:
-  - title: QuickStarts van vijf minuten
-    items:
-      - type: paragraph
-        text: 'Maak een virtuele Azure-machine, configureer deze voor uitvoering als IoT Edge-apparaat en implementeer er code in:'
-      - type: list
-        style: icon48
-        items:
-          - image:
-              src: 'https://docs.microsoft.com/media/logos/logo_Windows.svg'
-            text: Windows
-            href: /azure/iot-edge/quickstart
-          - image:
-              src: 'https://docs.microsoft.com/media/logos/logo_linux-color.svg'
-            text: Linux
-            href: /azure/iot-edge/quickstart-linux
-  - title: Zelfstudies met stapsgewijze instructies
-    items:
-      - type: paragraph
-        text: 'Informatie over het installeren en configureren van IoT Edge, het implementeren van modules en het gebruik van Azure-services zoals Stream Analytics en Custom Vision aan de rand.'
-      - type: list
-        style: ordered
-        items:
-          - html: Stel uw ontwikkelcomputer in en kom meer te weten over IoT Edge-modules voor <a href="/azure/iot-edge/tutorial-develop-for-linux">Linux-apparaten</a> of <a href="/azure/iot-edge/tutorial-develop-for-windows">Windows-apparaten</a>.
-          - html: 'Ontwikkel aangepaste codemodules voor Linux-apparaten in <a href="/azure/iot-edge/tutorial-c-module">C</a>, <a href="/azure/iot-edge/tutorial-csharp-module">C#</a>, <a href="/azure/iot-edge/tutorial-python-module">Python</a>, <a href="/azure/iot-edge/tutorial-node-module">Node.js</a> of <a href="/azure/iot-edge/tutorial-java-module">Java</a>.'
-          - html: 'Ontwikkel aangepaste codemodules voor Windows-apparaten in <a href="/azure/iot-edge/tutorial-c-module-windows">C</a> of <a href="/azure/iot-edge/tutorial-csharp-module-windows">C#</a>.'
-          - html: <a href="/azure/iot-edge/tutorial-deploy-function">Berichten filteren met Azure Functions</a>
-          - html: <a href="/azure/iot-edge/tutorial-deploy-stream-analytics">Gemiddelden vinden met Azure Stream Analytics als module</a>
-          - html: <a href="/azure/iot-edge/tutorial-deploy-machine-learning">Gegevens een score geven met Azure Machine Learning als module</a>
-          - html: <a href="/azure/iot-edge/tutorial-deploy-custom-vision">Afbeeldingen classificeren met Custom Vision Service als module</a>
-          - html: <a href="/azure/iot-edge/tutorial-store-data-sql-server">Gegevens opslaan aan de rand met SQL Server</a>
+summary: 'Azure IoT Edge is een Internet of Things-service (IoT-service) die voortbouwt op IoT Hub. Deze service is bedoeld voor klanten die gegevens willen analyseren op apparaten, oftewel ''bij de edge'' in plaats van in de cloud. Door delen van uw werkbelasting naar de rand te verplaatsen, hoeven uw apparaten minder tijd te besteden aan het verzenden van berichten naar de cloud en kunnen ze sneller reageren op gebeurtenissen.'
+landingContent:
+  - title: Ontwikkelen voor Linux-apparaten
+    linkLists:
+      - linkListType: quickstart
+        links:
+          - text: Uw eerste IoT Edge-module implementeren in een Linux-apparaat
+            url: quickstart-linux.md
+      - linkListType: tutorial
+        links:
+          - text: IoT Edge-modules ontwikkelen voor Linux-apparaten
+            url: tutorial-develop-for-linux.md
+      - linkListType: how-to-guide
+        links:
+          - text: Visual Studio Code gebruiken om modules te ontwikkelen en er fouten in op te sporen
+            url: how-to-vs-code-develop-module.md
+  - title: Ontwikkelen voor Windows-apparaten
+    linkLists:
+      - linkListType: quickstart
+        links:
+          - text: Uw eerste IoT Edge-module implementeren in een Windows-apparaat
+            url: quickstart.md
+      - linkListType: tutorial
+        links:
+          - text: IoT Edge-modules ontwikkelen voor Windows-apparaten
+            url: tutorial-develop-for-windows.md
+      - linkListType: how-to-guide
+        links:
+          - text: Visual Studio 2017 gebruiken om modules te ontwikkelen en er fouten in op te sporen
+            url: how-to-visual-studio-develop-module.md
+  - title: IoT Edge-apparaten inrichten
+    linkLists:
+      - linkListType: how-to-guide
+        links:
+          - text: IoT Edge installeren in Linux x64
+            url: how-to-install-iot-edge-linux.md
+          - text: IoT Edge installeren in Linux ARM32
+            url: how-to-install-iot-edge-linux-arm.md
+          - text: IoT Edge installeren in Windows x64
+            url: how-to-install-iot-edge-windows.md
+          - text: Automatisch Linux-apparaten inrichten
+            url: how-to-auto-provision-simulated-device-linux.md
+          - text: Automatisch Windows-apparaten inrichten
+            url: how-to-auto-provision-simulated-device-windows.md
+  - title: Contact opnemen met de opensource-community
+    linkLists:
+      - linkListType: get-started
+        links:
+          - text: IoT Edge-opslagplaats
+            url: 'https://github.com/Azure/iotedge'
+          - text: GitHub-problemen met IoT Edge
+            url: 'https://github.com/Azure/iotedge/issues'
+          - text: Meest recente versies en wijzigingslogboeken
+            url: 'https://github.com/Azure/azure-iotedge/releases'
+  - title: IoT Edge-apparaten als gateways gebruiken
+    linkLists:
+      - linkListType: concept
+        links:
+          - text: Hoe een IoT Edge-apparaat kan worden gebruikt als gateway
+            url: iot-edge-as-gateway.md
+      - linkListType: how-to-guide
+        links:
+          - text: Een transparante gateway configureren
+            url: how-to-create-transparent-gateway.md
+          - text: Verbinding maken met een downstream-apparaat
+            url: how-to-connect-downstream-device.md
+  - title: Voorbereiden op productiescenario's
+    linkLists:
+      - linkListType: concept
+        links:
+          - text: Inzicht in automatische implementaties
+            url: module-deployment-monitoring.md
+          - text: Platformondersteuning
+            url: support.md
+          - text: Controlelijst voor productie-implementatie
+            url: production-checklist.md
+          - text: Inzicht in IoT Edge-certificaatgebruik
+            url: iot-edge-certs.md
+          - text: Beveiligingsstandaarden voor IoT Edge
+            url: security.md
+      - linkListType: how-to-guide
+        links:
+          - text: Op schaal implementeren en bewaken met de Azure CLI
+            url: how-to-deploy-monitor-cli.md
+          - text: Een CI/CD-pipeline maken met Azure Pipelines
+            url: how-to-ci-cd.md
+      - linkListType: deploy
+        links:
+          - text: REST API voor IoT Hub
+            url: 'https://docs.microsoft.com/rest/api/iothub/'
+  - title: AI implementeren naar de edge
+    linkLists:
+      - linkListType: tutorial
+        links:
+          - text: Azure Machine Learning als een IoT Edge-module implementeren
+            url: tutorial-deploy-machine-learning.md
+          - text: Custom Vision Service gebruiken om afbeeldingsclassificatie uit te voeren aan de rand
+            url: tutorial-deploy-custom-vision.md
+      - linkListType: deploy
+        links:
+          - text: Azure Cognitive Services-modules zoeken in de Azure Marketplace
+            url: 'https://azuremarketplace.microsoft.com/marketplace/apps/category/internet-of-things?subcategories=iot-edge-modules&search=azure%20cognitive%20services'
