--- a/articles/active-directory-b2c/index.yml
+++ b/articles/active-directory-b2c/index.yml
@@ -5,13 +5,13 @@ metadata:
   title: Documentatie over Azure Active Directory B2C
   meta.description: 'Learn how to use Azure Active Directory B2C to customize and control how customers sign up, sign in, and manage their profiles when using your applications.'
   services: active-directory-b2c
-  author: davidmu1
+  author: mmacy
   manager: daveba
   ms.service: active-directory
   ms.subservice: B2C
   ms.topic: landing-page
   ms.date: 03/29/2018
-  ms.author: davidmu
+  ms.author: marsma
 abstract:
   description: 'Azure Active Directory (Azure AD) B2C is een identiteitsbeheerservice waarmee u kunt aanpassen en controleren hoe uw klanten zich registreren en aanmelden en hoe zijn hun profielen beheren wanneer ze uw toepassingen gebruiken. Dit omvat ook toepassingen die onder meer zijn ontwikkeld voor iOS, Android en .NET. Met Azure AD B2C kunt u deze acties uitvoeren terwijl u tegelijkertijd de identiteit van uw klant beschermt. Ontdek met onze snelstartgidsen, zelfstudies en voorbeelden hoe u Azure AD B2C gebruikt.'
   aside:
