--- a/articles/active-directory/devices/index.yml
+++ b/articles/active-directory/devices/index.yml
@@ -1,6 +1,6 @@
 ### YamlMime:YamlDocument
 documentType: LandingData
-title: Documentatie over het beheer van Azure AD-apparaatidentiteiten
+title: Documentatie over Azure AD-apparaatidentiteit
 metadata:
   document_id: null
   title: 'Documentatie over het beheer van Azure AD-apparaatidentiteiten - Zelfstudies, concepten, naslaginformatie | Microsoft Docs'
