--- a/articles/security/TOC.yml
+++ b/articles/security/TOC.yml
@@ -226,6 +226,8 @@
     - name: FedRAMP
       displayName: 'blueprint, privacy, certifications'
       items:
+        - name: Azure-services op controlebeleid
+          href: ./compliance/azure-services-in-fedramp-auditscope.md
         - name: Gegevensanalyse
           href: ./blueprints/fedramp-analytics-overview.md
         - name: Datawarehouse
