--- a/articles/postgresql/TOC.yml
+++ b/articles/postgresql/TOC.yml
@@ -188,6 +188,10 @@
           href: howto-configure-server-parameters-using-portal.md
         - name: Azure-CLI
           href: howto-configure-server-parameters-using-cli.md
+    - name: Opslag automatisch vergroten
+      items:
+        - name: Azure Portal
+          href: howto-auto-grow-storage-portal.md
     - name: Serverlogboeken openen
       items:
         - name: Azure Portal
